<?xml version="1.0" encoding="utf-8"?>

<!-- This fragment displays recipe video and step details -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llayout_step_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlayout_player"
        android:layout_width="match_parent"
        android:layout_height="@dimen/media_player_height"
        android:background="@color/colorLightGrey"
        android:padding="@dimen/activity_margin">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/playerview_recipe_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTextPrimary" />

        <ImageView
            android:id="@+id/imageview_no_media"
            style="@style/StepNoMediaImageView"
            android:contentDescription="@string/no_media_placeholder" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textview_step_description"
        style="@style/StepDescriptionTextView"
        tools:text="@string/step_placeholder" />

</LinearLayout>