<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.StepActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llayout_step_nav"
            style="@style/StepNavLayout">

            <ImageButton
                android:id="@+id/button_previous"
                style="@style/StepNavButton"
                android:layout_marginEnd="@dimen/activity_margin"
                android:contentDescription="@string/previous_button"
                android:src="@drawable/ic_previous" />

            <TextView
                android:id="@+id/textview_step_number"
                style="@style/StepNumberTextView"
                tools:text="@string/step_number_placeholder" />

            <ImageButton
                android:id="@+id/button_next"
                style="@style/StepNavButton"
                android:layout_marginStart="@dimen/activity_margin"
                android:contentDescription="@string/next_button"
                android:src="@drawable/ic_next" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/container_recipe_step_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </FrameLayout>

    </LinearLayout>

</ScrollView>