<?xml version="1.0" encoding="utf-8"?><!-- This fragment is for displaying recipe ingredients and steps -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_ingredients"
            style="@style/IngredientsTextView"
            tools:text="@string/ingredients_label" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>